maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:99: error: expected class or object definition
def caseAccessible(x : Int, y :Int, dir:Int): Boolean ={
^JediEscaper:117: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:118: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:119: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:120: error: Unmatched closing brace '}' ignored here
}
^